--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,24 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.3.3.RELEASE'
 }
-
-group 'org.example'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.3.0.RELEASE'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+group = ''
+version = ''
+description = 'Connekt1on'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
 }
 
 test {
