Template for Heroku deployment

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ version = ''
 description = 'Connekt1on'
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_1_8
 }
 
 test {
